Moved OrganizationSponsorship code to Billing

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Billing\OrganizationFeatures\" />
     <Folder Include="Resources\" />
     <Folder Include="Properties\" />
   </ItemGroup>
