Add sqlcmd so that I can load databases

--- a/src/Api/Dockerfile
+++ b/src/Api/Dockerfile
@@ -6,7 +6,17 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends \
     gosu \
     curl \
+    gnupg \
+    wget \
+    software-properties-common \
     && rm -rf /var/lib/apt/lists/*
+
+# Install sqlcmd (Go) command-line tools
+RUN curl https://packages.microsoft.com/keys/microsoft.asc | tee /etc/apt/trusted.gpg.d/microsoft.asc \
+    && wget -qO- https://packages.microsoft.com/config/ubuntu/20.04/prod.list | tee /etc/apt/sources.list.d/msprod.list \
+    && apt-get update \
+    && apt-get install -y sqlcmd
+
 
 ENV ASPNETCORE_URLS http://+:5000
 WORKDIR /app
