Moved tests to billing

--- a/test/Core.Test/Core.Test.csproj
+++ b/test/Core.Test/Core.Test.csproj
@@ -29,4 +29,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Utilities\data\embeddedResource.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Billing\OrganizationFeatures\" />
+  </ItemGroup>
 </Project>
