--- a/.github/workflows/test-database.yml
+++ b/.github/workflows/test-database.yml
@@ -114,6 +114,18 @@ jobs:
           BW_TEST_DATABASES__3__CONNECTIONSTRING: "Data Source=${{ runner.temp }}/test.db"
         run: dotnet test --logger "trx;LogFileName=infrastructure-test-results.trx"
         shell: pwsh
+      
+      - name: Print MySQL Logs
+        if: failure()
+        run: 'docker logs $(docker ps --quiet --filter "name=mysql")'
+
+      - name: Print Postgres Logs
+        if: failure()
+        run: 'docker logs $(docker ps --quiet --filter "name=postgres")'
+
+      - name: Print MSSQL Logs
+        if: failure()
+        run: 'docker logs $(docker ps --quiet --filter "name=mssql")'
 
       - name: Report test results
         uses: dorny/test-reporter@31a54ee7ebcacc03a09ea97a7e5465a47b84aea5 # v1.9.1
