--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -166,7 +166,7 @@ jobs:
         if: ${{ steps.version-changed.outputs.changes_to_commit == 'TRUE' }}
         env:
           PR_BRANCH: ${{ steps.create-branch.outputs.name }}
-        run: git push -u origin $
+        run: git push -u origin $PR_BRANCH
 
       - name: Generate GH App token
         uses: actions/create-github-app-token@3378cda945da322a8db4b193e19d46352ebe2de5 # v1.10.4
