--- a/src/Admin/appsettings.Development.json
+++ b/src/Admin/appsettings.Development.json
@@ -9,6 +9,7 @@
       "sso": "http://localhost:51822",
       "internalNotifications": "http://localhost:61840",
       "internalAdmin": "http://localhost:62911",
+      "internalBilling": "http://localhost:44519",
       "internalIdentity": "http://localhost:33656",
       "internalApi": "http://localhost:4000",
       "internalVault": "https://localhost:8080",
