--- a/ephemeral-environments/ephemeral-environment-hello-world.yaml
+++ b/ephemeral-environments/ephemeral-environment-hello-world.yaml
@@ -2,6 +2,7 @@ component:
   admin:
     image:
       name: bitwardenprod.azurecr.io/admin
+      tag: dev
 extensions:
   dbClient:
     enabled: true
