--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -593,7 +593,7 @@ jobs:
               owner: 'bitwarden',
               repo: 'devops',
               workflow_id: '_update_ephemeral_tags.yml',
-              ref: 'BRE-349-create-git-hub-workflow-to-update-ephemeral-environment-values-file'
+              ref: 'BRE-349-create-git-hub-workflow-to-update-ephemeral-environment-values-file',
               inputs: {
                 ephemeral_env_branch: '${{ github.ref_name }}'
               }
