Adjusted self host license namespaces to be more specific

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -63,7 +63,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Billing\OrganizationFeatures\" />
+    <Folder Include="Billing\SelfHostLicenses\" />
     <Folder Include="Resources\" />
     <Folder Include="Properties\" />
   </ItemGroup>
