--- a/.github/workflows/repository-management.yml
+++ b/.github/workflows/repository-management.yml
@@ -67,39 +67,6 @@ jobs:
         with:
           ref: main
 
-      - name: Log in to Azure - CI subscription
-        uses: Azure/login@e15b166166a8746d1a47596803bd8c1b595455cf # v1.6.0
-        with:
-          creds: ${{ secrets.AZURE_KV_CI_SERVICE_PRINCIPAL }}
-
-      - name: Retrieve secrets
-        id: retrieve-secrets
-        uses: bitwarden/gh-actions/get-keyvault-secrets@main
-        with:
-          keyvault: "bitwarden-ci"
-          secrets: "github-gpg-private-key,
-            github-gpg-private-key-passphrase"
-
-      - name: Import GPG key
-        uses: crazy-max/ghaction-import-gpg@01dd5d3ca463c7f10f7f4f7b4f177225ac661ee4 # v6.1.0
-        with:
-          gpg_private_key: ${{ steps.retrieve-secrets.outputs.github-gpg-private-key }}
-          passphrase: ${{ steps.retrieve-secrets.outputs.github-gpg-private-key-passphrase }}
-          git_user_signingkey: true
-          git_commit_gpgsign: true
-
-      - name: Set up Git
-        run: |
-          git config --local user.email "106330231+bitwarden-devops-bot@users.noreply.github.com"
-          git config --local user.name "bitwarden-devops-bot"
-
-      - name: Create version branch
-        id: create-branch
-        run: |
-          NAME=version_bump_${{ github.ref_name }}_$(date +"%Y-%m-%d")
-          git switch -c $NAME
-          echo "name=$NAME" >> $GITHUB_OUTPUT
-
       - name: Install xmllint
         run: |
           sudo apt-get update
@@ -164,57 +131,18 @@ jobs:
             echo "version=${{ steps.calculate-next-version.outputs.version }}" >> $GITHUB_OUTPUT
           fi
 
+      - name: Configure Git
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "Github Actions"
+
       - name: Commit files
         run: git commit -m "Bumped version to ${{ steps.set-final-version-output.outputs.version }}" -a
 
       - name: Push changes
-        env:
-          PR_BRANCH: ${{ steps.create-branch.outputs.name }}
-        run: git push -u origin $PR_BRANCH
-
-      - name: Generate GH App token
-        uses: actions/create-github-app-token@5d869da34e18e7287c1daad50e0b8ea0f506ce69 # v1.11.0
-        id: app-token
-        with:
-          app-id: ${{ secrets.BW_GHAPP_ID }}
-          private-key: ${{ secrets.BW_GHAPP_KEY }}
-          owner: ${{ github.repository_owner }}
-
-      - name: Create version PR
-        id: create-pr
-        env:
-          GH_TOKEN: ${{ steps.app-token.outputs.token }}
-          PR_BRANCH: ${{ steps.create-branch.outputs.name }}
-          TITLE: "Bump version to ${{ steps.set-final-version-output.outputs.version }}"
         run: |
-          PR_URL=$(gh pr create --title "$TITLE" \
-            --base "main" \
-            --head "$PR_BRANCH" \
-            --label "version update" \
-            --label "automated pr" \
-            --body "
-              ## Type of change
-              - [ ] Bug fix
-              - [ ] New feature development
-              - [ ] Tech debt (refactoring, code cleanup, dependency upgrades, etc)
-              - [ ] Build/deploy pipeline (DevOps)
-              - [X] Other
-
-              ## Objective
-              Automated version bump to ${{ steps.set-final-version-output.outputs.version }}")
-          echo "pr_number=${PR_URL##*/}" >> $GITHUB_OUTPUT
-
-      - name: Approve PR
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_NUMBER: ${{ steps.create-pr.outputs.pr_number }}
-        run: gh pr review $PR_NUMBER --approve
-
-      - name: Merge PR
-        env:
-          GH_TOKEN: ${{ steps.app-token.outputs.token }}
-          PR_NUMBER: ${{ steps.create-pr.outputs.pr_number }}
-        run: gh pr merge $PR_NUMBER --squash --auto --delete-branch
+          git pull -pt
+          git push
 
 
   cherry_pick:
@@ -226,6 +154,11 @@ jobs:
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
         with:
           ref: main
+      
+      - name: Install xmllint
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libxml2-utils
 
       - name: Verify version has been updated
         env:
@@ -253,12 +186,21 @@ jobs:
             git switch rc
             RC_COMMIT=$(git log --reverse --pretty=format:"%H" --max-count=1 Directory.Build.props)
             echo "rc_commit=$RC_COMMIT" >> $GITHUB_OUTPUT
+
+            RC_VERSION=$(xmllint -xpath "/Project/PropertyGroup/Version/text()" Directory.Build.props)
+            echo "rc_version=$RC_VERSION" >> $GITHUB_OUTPUT
           fi
+      
+      - name: Configure Git
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "Github Actions"
 
       - name: Perform cherry-pick(s)
         env:
           MAIN_COMMIT: ${{ steps.get-commits.outputs.main_commit }}
           RC_COMMIT: ${{ steps.get-commits.outputs.rc_commit }}
+          RC_VERSION: ${{ steps.get-commits.outputs.rc_version }}
           CUT_BRANCH: ${{ inputs.branch_to_cut }}
         run: |
           # If we are cutting 'hotfix-rc':
@@ -269,12 +211,15 @@ jobs:
 
               # Chery-pick from 'rc' into 'hotfix-rc'
               git switch hotfix-rc
-              git cherry-pick -x $RC_COMMIT
-              git push -u origin hotfix-rc
+              HOTFIX_RC_VERSION=$(xmllint -xpath "/Project/PropertyGroup/Version/text()" Directory.Build.props)
+              if [[ "$HOTFIX_RC_VERSION" != "$RC_VERSION" ]]; then
+                git cherry-pick --strategy-option=theirs -x $RC_COMMIT
+                git push -u origin hotfix-rc
+              fi
 
               # Cherry-pick from 'main' into 'rc'
               git switch rc
-              git cherry-pick -x $MAIN_COMMIT
+              git cherry-pick --strategy-option=theirs -x $MAIN_COMMIT
               git push -u origin rc
 
             # If the 'rc' branch does not exist:
@@ -282,7 +227,7 @@ jobs:
 
               # Cherry-pick from 'main' into 'hotfix-rc'
               git switch hotfix-rc
-              git cherry-pick -x $MAIN_COMMIT
+              git cherry-pick --strategy-option=theirs -x $MAIN_COMMIT
               git push -u origin hotfix-rc
 
             fi
@@ -292,7 +237,7 @@ jobs:
 
             # Cherry-pick from 'main' into 'rc'
             git switch rc
-            git cherry-pick -x $MAIN_COMMIT
+            git cherry-pick --strategy-option=theirs -x $MAIN_COMMIT
             git push -u origin rc
 
           fi
