--- a/.github/workflows/cleanup-ephemeral-environment.yml
+++ b/.github/workflows/cleanup-ephemeral-environment.yml
@@ -5,10 +5,27 @@ on:
     types: [unlabeled]
 
 jobs:
+  validate-pr:
+    name: Validate PR
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout PR
+        uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
+        
+      - name: Validate config existed on branch
+        run: |
+          # Search the git history for config files, exit if not found.
+          if [[ -z $(git rev-list --all -- "ephemeral-environments/$GITHUB_HEAD_REF.yaml") ]]; then
+            echo "No ephemeral environment config found on branch, exiting."
+            exit 1
+          fi
+
+          echo "Ephemeral environment config found on branch, continuing."
+
   cleanup-config:
     name: Cleanup ephemeral environment
     runs-on: ubuntu-24.04
-    if: ${{ contains(github.event.pull_request.labels.*.name, 'ephemeral-environment') }}
+    needs: validate-pr
     steps:
       - name: Log in to Azure - CI subscription
         uses: Azure/login@e15b166166a8746d1a47596803bd8c1b595455cf # v1.6.0
