Changes for webhook secrets
Signed-off-by: Cy Okeke <cokeke@bitwarden.com>

--- a/src/Billing/appsettings.json
+++ b/src/Billing/appsettings.json
@@ -60,6 +60,7 @@
     "stripeWebhookSecret": "SECRET",
     "stripeWebhookSecret20231016": "SECRET",
     "stripeWebhookSecret20240620": "SECRET",
+    "stripeWebhookSecret20241028": "SECRET",
     "bitPayWebhookKey": "SECRET",
     "appleWebhookKey": "SECRET",
     "payPal": {
