--- a/.github/workflows/test-database.yml
+++ b/.github/workflows/test-database.yml
@@ -62,13 +62,13 @@ jobs:
       - name: Restore tools
         run: dotnet tool restore
 
-      - name: Docker Compose databases
-        working-directory: "dev"
-        # We could think about not using profiles and pulling images directly to cover multiple versions
-        run: |
-          cp .env.example .env
-          docker compose --profile mssql --profile postgres --profile mysql up -d
-        shell: pwsh
+      # - name: Docker Compose databases
+      #   working-directory: "dev"
+      #   # We could think about not using profiles and pulling images directly to cover multiple versions
+      #   run: |
+      #     cp .env.example .env
+      #     docker compose --profile mssql --profile postgres --profile mysql up -d
+      #   shell: pwsh
 
       - name: Add Maria DB
         # Use a different port than MySQL
@@ -85,22 +85,22 @@ jobs:
         env:
           CONN_STR: "server=localhost;uid=root;pwd=SET_A_PASSWORD_HERE_123;database=vault_dev;Allow User Variables=true"
 
-      - name: Checking pending model changes (Postgres)
-        working-directory: "util/PostgresMigrations"
-        run: 'dotnet ef migrations has-pending-model-changes -- --GlobalSettings:PostgreSql:ConnectionString="$CONN_STR"'
-        env:
-          CONN_STR: "Host=localhost;Username=postgres;Password=SET_A_PASSWORD_HERE_123;Database=vault_dev"
+      # - name: Checking pending model changes (Postgres)
+      #   working-directory: "util/PostgresMigrations"
+      #   run: 'dotnet ef migrations has-pending-model-changes -- --GlobalSettings:PostgreSql:ConnectionString="$CONN_STR"'
+      #   env:
+      #     CONN_STR: "Host=localhost;Username=postgres;Password=SET_A_PASSWORD_HERE_123;Database=vault_dev"
 
-      - name: Checking pending model changes (SQLite)
-        working-directory: "util/SqliteMigrations"
-        run: 'dotnet ef migrations has-pending-model-changes -- --GlobalSettings:Sqlite:ConnectionString="$CONN_STR"'
-        env:
-          CONN_STR: "Data Source=${{ runner.temp }}/test.db"
+      # - name: Checking pending model changes (SQLite)
+      #   working-directory: "util/SqliteMigrations"
+      #   run: 'dotnet ef migrations has-pending-model-changes -- --GlobalSettings:Sqlite:ConnectionString="$CONN_STR"'
+      #   env:
+      #     CONN_STR: "Data Source=${{ runner.temp }}/test.db"
 
-      - name: Migrate SQL Server
-        run: 'dotnet run --project util/MsSqlMigratorUtility/ "$CONN_STR"'
-        env:
-          CONN_STR: "Server=localhost;Database=vault_dev;User Id=SA;Password=SET_A_PASSWORD_HERE_123;Encrypt=True;TrustServerCertificate=True;"
+      # - name: Migrate SQL Server
+      #   run: 'dotnet run --project util/MsSqlMigratorUtility/ "$CONN_STR"'
+      #   env:
+      #     CONN_STR: "Server=localhost;Database=vault_dev;User Id=SA;Password=SET_A_PASSWORD_HERE_123;Encrypt=True;TrustServerCertificate=True;"
 
       - name: Migrate MySQL
         working-directory: "util/MySqlMigrations"
@@ -112,7 +112,7 @@ jobs:
         working-directory: "util/MySqlMigrations"
         run: 'dotnet ef database update --connection "$CONN_STR" -- --GlobalSettings:MySql:ConnectionString="$CONN_STR"'
         env:
-          CONN_STR: "server=mariadb;uid=root;pwd=mariadb-password;database=vault_dev;Allow User Variables=true"
+          CONN_STR: "server=mariadb:4306;uid=root;pwd=mariadb-password;database=vault_dev;Allow User Variables=true"
 
       - name: Migrate Postgres
         working-directory: "util/PostgresMigrations"
