--- a/.github/workflows/test-database.yml
+++ b/.github/workflows/test-database.yml
@@ -112,7 +112,7 @@ jobs:
         working-directory: "util/MySqlMigrations"
         run: 'dotnet ef database update --connection "$CONN_STR" -- --GlobalSettings:MySql:ConnectionString="$CONN_STR"'
         env:
-          CONN_STR: "server=mariadb:4306;uid=root;pwd=mariadb-password;database=vault_dev;Allow User Variables=true"
+          CONN_STR: "server=localhost;port=4306;uid=root;pwd=mariadb-password;database=vault_dev;Allow User Variables=true"
 
       - name: Migrate Postgres
         working-directory: "util/PostgresMigrations"
