--- a/.github/workflows/test-database.yml
+++ b/.github/workflows/test-database.yml
@@ -70,7 +70,7 @@ jobs:
           docker compose --profile mssql --profile postgres --profile mysql up -d
         shell: pwsh
 
-      - name: Add Maria DB
+      - name: Add MariaDB for unified
         # Use a different port than MySQL
         run: |
           docker run --detach --name mariadb --env MARIADB_ROOT_PASSWORD=mariadb-password -p 4306:3306 mariadb:latest
